Using global arrays, ConstExpr GEPs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_C_STANDARD 17)
 
 add_executable(EscapeAnalysisTest main.c NewTests.cpp)
 
-list(APPEND CMAKE_PROGRAM_PATH "/Users/ap/CLionProjects/llvm-project/llvm/build/bin")
+#list(APPEND CMAKE_PROGRAM_PATH "/Users/ap/CLionProjects/llvm-project/llvm/build/bin")
+list(APPEND CMAKE_PROGRAM_PATH "/home/ap/dev/llvm-project/llvm/build/bin")
 
 find_program(LLVM_LINK_EXECUTABLE llvm-link)
 find_program(OPT_EXECUTABLE opt)
@@ -33,9 +34,11 @@ target_compile_options(EscapeAnalysisTest PRIVATE -O0 -S -emit-llvm
 #COMMAND /home/ap/dev/llvm-project/llvm/build/bin/opt
 add_custom_command(TARGET EscapeAnalysisTest POST_BUILD
         COMMAND ${OPT_EXECUTABLE}
+                -passes=mem2reg
                 -S EscapeAnalysisTest.ll
                 -o EscapeAnalysisTest_mem2reg.ll
         COMMAND  ${OPT_EXECUTABLE}
+                -stats
                 -S -passes='print<escape-analysis>'
                 EscapeAnalysisTest_mem2reg.ll -disable-output
                 -debug-only=escape-analysis
@@ -46,6 +49,7 @@ add_custom_command(TARGET EscapeAnalysisTest POST_BUILD
 # Run Escape Analysis Printer
 add_custom_command(TARGET EscapeAnalysisTest POST_BUILD
         COMMAND ${CLANG_EXECUTABLE}
+        -mllvm -stats
         -S -emit-llvm -fsanitize=thread
         -mllvm -tsan-use-escape-analysis
         -mllvm -debug-only=tsan,tsan-ea
