--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,44 +26,46 @@ message(STATUS "Found llvm-link: ${LLVM_LINK_EXECUTABLE}")
 
 ####################################################################################
 
-add_executable(EscapeAnalysisTest main.c)
-
 set(CMAKE_C_LINK_EXECUTABLE
         "${LLVM_LINK_EXECUTABLE} <LINK_FLAGS> -S <OBJECTS> -o <TARGET>.ll <LINK_LIBRARIES>")
-#"/home/ap/dev/llvm-project/llvm/build/bin/llvm-link \
 
-target_compile_options(EscapeAnalysisTest PRIVATE -O0 -S -emit-llvm
-        -Wno-unused-command-line-argument -Wno-return-stack-address
-        -Xclang -disable-O0-optnone
+function(add_escape_analysis_target target_name source_file analysis_pass)
+        add_executable(${target_name} ${source_file})
+
+        target_compile_options(${target_name} PRIVATE -O0 -S -emit-llvm
+                -Wno-unused-command-line-argument -Wno-return-stack-address
+                -Xclang -disable-O0-optnone
         )
 
-# Run Escape Analysis Printer
-add_custom_command(TARGET EscapeAnalysisTest POST_BUILD
-        COMMAND ${OPT_EXECUTABLE}
+        add_custom_command(TARGET ${target_name} POST_BUILD
+                COMMAND ${OPT_EXECUTABLE}
                 -passes=sroa
-                -S EscapeAnalysisTest.ll
-                -o EscapeAnalysisTest_mem2reg.ll
-        COMMAND  ${OPT_EXECUTABLE}
-                -S -passes='print<escape-analysis>'
+                -S ${target_name}.ll
+                -o ${target_name}_mem2reg.ll
+                COMMAND ${OPT_EXECUTABLE}
+                -S -passes='print<${analysis_pass}>'
                 -debug-only=ea
-                EscapeAnalysisTest_mem2reg.ll -disable-output
+                ${target_name}_mem2reg.ll -disable-output
                 -debug-only=escape-analysis
-        DEPENDS EscapeAnalysisTest.ll
-        COMMENT "Running Escape Analysis Printer"
-)
-#-passes=mem2reg
+                DEPENDS ${target_name}.ll
+                COMMENT "Running ${analysis_pass} Printer"
+        )
 
-# Run Escape Analysis Printer
-add_custom_command(TARGET EscapeAnalysisTest POST_BUILD
-        COMMAND ${CLANG_EXECUTABLE}
-        -S -emit-llvm -fsanitize=thread
-        -O2
-        -mllvm -tsan-use-escape-analysis
-        -mllvm -debug-only=tsan
-        ../main.c
-        -o EscapeAnalysisTest_TSan_instr.ll
-        COMMENT "Running TSan"
-)
+        # Run Escape Analysis Printer
+        add_custom_command(TARGET EscapeAnalysisTest POST_BUILD
+                COMMAND ${CLANG_EXECUTABLE}
+                -S -emit-llvm -fsanitize=thread
+                -O2
+                -mllvm -tsan-use-escape-analysis
+                -mllvm -debug-only=tsan
+                ../${source_file}
+                -o ${target_name}_TSan_instr.ll
+                COMMENT "Running TSan"
+        )
+endfunction()
+
+add_escape_analysis_target(EscapeAnalysisTest EscapeAnalysisTest.c escape-analysis)
+add_escape_analysis_target(EscapeAnalysisGlobalTest EscapeAnalysisGlobalTest.c escape-analysis-global)
 
 ####################################################################################
 
