--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,7 +117,7 @@ function(add_tsan_target target_name source_file)
                 -o ${target_name}_instr.ll
                 -fsanitize=thread
                 "SHELL:-mllvm -tsan-use-escape-analysis-global"
-                "SHELL:-mllvm -debug-only=ea"
+                "SHELL:-mllvm -debug-only=ea,tsan-ea,tsan"
                 -Wno-unused-command-line-argument
                 -Wno-return-stack-address
                 -Xclang -disable-O0-optnone
